--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -16,7 +16,7 @@
             <span ng-bind="'Developer: ' + vm.gameInfo.developer"></span><br/>
             <span ng-bind="'Publisher: ' + vm.gameInfo.publisher"></span><br/>
             <span ng-bind="'Genre: ' + vm.gameInfo.genre"></span><br/>
-            <div ng-repeat="release in vm.releases">
+            <div ng-repeat="release in vm.gameInfo.releases">
                 <span ng-bind="release.region + ': ' + release.date"></span>
             </div>
             <span ng-bind="vm.achievements.length + ' achievements'"></span><br/>
