--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -16,10 +16,8 @@
             <span ng-bind="'Developer: ' + vm.gameInfo.developer"></span><br/>
             <span ng-bind="'Publisher: ' + vm.gameInfo.publisher"></span><br/>
             <span ng-bind="'Genre: ' + vm.gameInfo.genre"></span><br/>
-            <div ng-repeat="release in vm.gameInfo.releases">
-                <span ng-bind="release.region + ': ' + release.date"></span>
-            </div>
             <span ng-bind="vm.achievements.length + ' achievements'"></span><br/>
+            <a target="_blank" href="http://www.xboxachievements.com/game/{{vm.gameInfo.permalink}}/achievements/">XBA Link</a><br />
             <span>Linked to Parse: </span>
             <span class="text-primary" ng-class="vm.inParse ? 'fa fa-link' : 'fa fa-chain-broken'"></span><br/>
             <span><a href="" ng-click="vm.addGameInfoToParse(vm.gameInfo)" ng-if="!vm.inParse">Add to Parse</a></span>
