--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -18,19 +18,19 @@
             <span ng-bind="'Genre: ' + vm.gameInfo.genre"></span><br/>
             <span ng-bind="vm.achievements.length + ' achievements'"></span><br/>
             <a target="_blank" href="http://www.xboxachievements.com/game/{{vm.gameInfo.permalink}}/achievements/">XBA Link</a><br />
-            <span>Linked to Parse: </span>
+            <span ng-bind="vm.inParse ? 'Linked to Parse: ' : 'Not Linked to Parse: '"></span>
             <span class="text-primary" ng-class="vm.inParse ? 'fa fa-link' : 'fa fa-chain-broken'"></span><br/>
-            <span><a href="" ng-click="vm.addGameInfoToParse(vm.gameInfo)" ng-if="!vm.inParse">Add to Parse</a></span>
         </div>
+    </div>
+    
+    <div class="btn-group" role="group" style="margin-top: 20px;">
+      <button type="button" class="btn btn-default" ng-disabled="vm.inParse" ng-click="vm.addGameInfoToParse(vm.gameInfo)">Add Game Info to Parse</button>
+      <button type="button" class="btn btn-default" ng-disabled="vm.achievements.length == vm.parseAchievements.length && vm.inParse || !vm.inParse" ng-click="vm.uploadAllAchievements()">Add Achievements to Parse</button>
     </div>
 
     <h2 class="page-header">Achievements</h2>
-    <div ng-if="vm.achievements.length != vm.parseAchievements.length && vm.inParse">
-        <a href="" target="_self" ng-click="vm.uploadAllAchievements()">Upload All Achievements</a>
-        <hr/>
-    </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive hidden-sm hidden-xs">
         <table class="table table-striped table-condensed">
             <thead>
             <tr>
@@ -58,16 +58,16 @@
         </table>
     </div>
 
-    <!--<div class="row">-->
-        <!--<div class="col-md-4 col-sm-6" ng-repeat="ach in vm.achievements">-->
-            <!--<div class="achievement-wrapper">-->
-                <!--<img class="img-responsive" src="{{ach.imageUrl}}" alt="Cover">-->
-                <!--<div class="gradient">-->
-                    <!--<h4 class="media-heading" ng-bind="ach.title"></h4>-->
-                    <!--<p ng-bind="ach.description"></p>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="row visible-sm visible-xs">
+        <div class="col-md-4 col-sm-6" ng-repeat="ach in vm.achievements">
+            <div class="achievement-wrapper">
+                <img class="img-responsive" src="{{ach.imageUrl}}" alt="Cover">
+                <div class="gradient">
+                    <h4 class="media-heading">{{ach.title}} - <span ng-class="ach.inParse ? 'fa fa-link text-primary' : 'fa fa-chain-broken'"></span></h4>
+                    <p ng-bind="ach.description"></p>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </div>
