--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -14,7 +14,7 @@
                 <div class="media-body">
                     <h4 class="media-heading">{{ach.title}}</h4>
                     <p>{{ach.achievementsAdded}}</p>
-                    <a href="/gameinfo/{{ach.gamePermalink}}">Game Info</a>
+                    <a href="/game-info/{{ach.gamePermalink}}">Game Info</a>
                 </div>
             </div>
             <br/>
