--- a/public/views/index.html
+++ b/public/views/index.html
@@ -43,6 +43,7 @@
 <script src="/js/application.js"></script>
 <script src="/js/services/xa-services.js"></script>
 <script src="/js/services/parse-services.js"></script>
+<script src="/js/services/giant-bomb-services.js"></script>
 <script src="/js/controllers/navbar-controller.js"></script>
 <script src="/js/controllers/home-controller.js"></script>
 <script src="/js/controllers/dashboard-controller.js"></script>
