--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -67,7 +67,7 @@
                              ng-src="{{vm.gameInfo.coverImageUrl}}"/>
 
                         <h3>Game Description</h3>
-                        <span>{{ vm.gameInfo.description | htmlTotext}}</span>
+                        <span>{{ vm.gameInfo.description }}</span>
                     </div>
                 </div>
 
