--- a/public/views/browse.html
+++ b/public/views/browse.html
@@ -45,7 +45,7 @@
             </thead>
             <tbody>
               <tr ng-repeat="game in vm.games">
-                  <td><img src="{{game.icoUrl}}"/></td>
+                  <td><img class="img-responsive" src="{{game.icoUrl}}" width="100px"/></td>
                   <td>
                       <span class="text-bold"><a href="/game-info/{{game.permalink}}">{{game.title}}</a></span><br/>
                       <span ng-bind="game.numberOfAchievements + ' achievements'"></span><br/>
