--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -4,7 +4,7 @@
     <h2 class="page-header">Latest Achievements - XBA</h2>
 
     <div class="row">
-        <div class="col-md-6" ng-repeat="ach in vm.latestAchievements">
+        <div class="col-md-4" ng-repeat="ach in vm.latestAchievements">
             <div class="media">
                 <div class="media-left">
                     <a href="#">
@@ -20,4 +20,16 @@
             <br/>
         </div>
     </div>
+
+    <div class="btn-group" role="group" style="margin-top: 20px;">
+        <button type="button" class="btn btn-default"
+                ng-disabled="vm.currentPage === 0 || vm.currentPage === 1"
+                ng-click="vm.getPrevious()">Previous
+        </button>
+        <button type="button" class="btn btn-default"
+                ng-click="vm.getNext()">Next
+        </button>
+    </div>
+    <br>
+    <br>
 </div>
