--- a/public/css/global.less
+++ b/public/css/global.less
@@ -1,5 +1,9 @@
 @import "variables";
 
+.alert {
+  border-radius: 0;
+}
+
 .container-bg {
   background-color: white;
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .2);
