--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,9 @@
   color: #cccccc;
   text-decoration: none;
 }
+.alert {
+  border-radius: 0;
+}
 .container-bg {
   background-color: white;
   -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
